@@ -1,3 +1,8 @@
+2012-02-01 S. Thiell <stephane.thiell@cea.fr>
+
+	* RangeSet.py: Fix RangeSet.__setstate__() for proper object unpickling
+	from older RangeSet versions. Add unpickling tests.
+
 2012-01-28 S. Thiell <stephane.thiell@cea.fr>
 
 	* RangeSet.py: Discard AVL-tree based implementation, as we noticed that
